--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,51 @@
----
-layout: default
----
+<HTML>
+<head>
+	<title>EMAIL TEMPLATES LISTING</title>
+	<style>
+	  body,
+	  html {
+	  	display: block;
+			font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+			text-align: center;
+			vertical-align: middle;
+			width: 100%;
+	  }
 
-{{ content }}
+	  ul {
+	  	font-size: 1em;
+	  	list-style-type: none; 
+	  }
+
+		li {
+			padding-bottom: 1em;
+		}
+
+		div {
+			display: inline-block;
+			margin: 1em auto;
+			width: 100%;
+		}
+
+		h1 {
+			background: #00458c;
+			color: #fff;
+			display: block;
+			padding: 1em;
+			text-transform: uppercase;
+			width: 100%;
+		}
+	</style>
+</head>
+<body>
+<div>
+<h1>Preview email templates </h1>
+	<ul>
+		<li><a href="master-template.html">Master Template</a></li>
+		<li><a href="two-columns.html">Two Columns</a> | Real World Content Preview</li>
+	</ul>
+	</div>
+</body>
+</HTML>
