--- a/source/index.html
+++ b/source/index.html
@@ -44,10 +44,11 @@
 <h1>Preview email templates </h1>
 	<ul>
 		<li><a href="master-template.html">Master Template</a></li>
-		<li><a href="two-columns.html">Two Columns</a> | Real World Content Preview</li>
-		<li><a href="single-column-and-two-columns.html">Single Column and Two Columns</a> | Real World Content Preview</li>
-		<li><a href="single-column-event.html">Single Column Event</a> | Real World Content Preview</li>
-		<li><a href="single-column-event-speakers.html">Single Column Event W/ Speakers</a> | Real World Content Preview</li>
+		<li><a href="two-columns.html">Two Columns</a></li>
+		<li><a href="single-column-and-two-columns.html">Single Column and Two Columns</a></li>
+		<li><a href="single-column-event.html">Single Column Event</a></li>
+		<li><a href="single-column-event-speakers.html">Single Column Event W/ Speakers</a></li>
+		<li><a href="newsletter.html">Newsletter</a></li>
 	</ul>
 	</div>
 </body>
